# instagrool

./: .gitignore  .pylintrc  README.md  instagrool.py  main.py  pyproject.toml
.github/workflows/: pylint-poetry.yml  pylint-simple.yml  pylint.yml
