[tool.poetry]
name = "instadeleter"
version = "0.1.0"
description = ""
authors = ["Josep Damià Carbonell Seguí <josepdcs@ext.inditex.com>"]

[tool.poetry.dependencies]
python = "^3.10"
instagrapi = "^1.16.30"
Pillow = "^9.3.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
